--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -7,12 +7,15 @@
     <title>facil</title>
     <style>
         body{
-            height: 100vh;
+            /*height: 100vh;
             background-color: black;
             background-image: url(images/wallpaper002.jpg);
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
+            background-attachment: scroll;*/
+
+            background: black url(images/wallpaper002.jpg) no-repeat center/cover scroll;
 
         }
 
@@ -20,7 +23,7 @@
             background-color: white;
             border: 1px solid red;
             border-radius: 10px;
-            width: 400px;
+            max-width: 400px;
             padding: 20px;
             margin: auto;
         }
@@ -29,6 +32,14 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia ad in voluptates doloremque. Placeat repellendus molestiae excepturi similique ad voluptate unde voluptatem nesciunt quisquam consequuntur hic veritatis, architecto cum animi! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure quia sit molestiae, necessitatibus, nemo excepturi, nam cupiditate labore mollitia impedit maiores ducimus enim eum voluptates alias possimus deleniti repellat optio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore laboriosam quisquam inventore sit deleniti beatae quod culpa distinctio nihil odio laudantium neque, ut autem cumque odit modi dolor ea sint!</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia ad in voluptates doloremque. Placeat repellendus molestiae excepturi similique ad voluptate unde voluptatem nesciunt quisquam consequuntur hic veritatis, architecto cum animi! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure quia sit molestiae, necessitatibus, nemo excepturi, nam cupiditate labore mollitia impedit maiores ducimus enim eum voluptates alias possimus deleniti repellat optio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore laboriosam quisquam inventore sit deleniti beatae quod culpa distinctio nihil odio laudantium neque, ut autem cumque odit modi dolor ea sint!</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia ad in voluptates doloremque. Placeat repellendus molestiae excepturi similique ad voluptate unde voluptatem nesciunt quisquam consequuntur hic veritatis, architecto cum animi! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure quia sit molestiae, necessitatibus, nemo excepturi, nam cupiditate labore mollitia impedit maiores ducimus enim eum voluptates alias possimus deleniti repellat optio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore laboriosam quisquam inventore sit deleniti beatae quod culpa distinctio nihil odio laudantium neque, ut autem cumque odit modi dolor ea sint!</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia ad in voluptates doloremque. Placeat repellendus molestiae excepturi similique ad voluptate unde voluptatem nesciunt quisquam consequuntur hic veritatis, architecto cum animi! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure quia sit molestiae, necessitatibus, nemo excepturi, nam cupiditate labore mollitia impedit maiores ducimus enim eum voluptates alias possimus deleniti repellat optio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore laboriosam quisquam inventore sit deleniti beatae quod culpa distinctio nihil odio laudantium neque, ut autem cumque odit modi dolor ea sint!</p>
+
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia ad in voluptates doloremque. Placeat repellendus molestiae excepturi similique ad voluptate unde voluptatem nesciunt quisquam consequuntur hic veritatis, architecto cum animi! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure quia sit molestiae, necessitatibus, nemo excepturi, nam cupiditate labore mollitia impedit maiores ducimus enim eum voluptates alias possimus deleniti repellat optio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore laboriosam quisquam inventore sit deleniti beatae quod culpa distinctio nihil odio laudantium neque, ut autem cumque odit modi dolor ea sint!</p>
     </main>
 </body>
