--- a/exercicios/desafio012/index.html
+++ b/exercicios/desafio012/index.html
@@ -19,9 +19,7 @@
             And we're dying with every step we take <br>
             We're dying with every breath we make <br>
             And I'll fall in line <br>
-        </p>
-
-        <p>
+            <br>
             A stranger's back is all I see <br>
             He's only a few feet in front of me <br>
             And I'll look left and right sometimes <br>
@@ -29,12 +27,13 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img1">
         <p>
             No one looks up anymore <br>
             'Cause you might get a raindrop in your eye <br>
             And heaven forbid they see you cry <br>
             As we fall in line <br>
+            <br>
             And about this time every year <br>
             The line will go to the ocean pier <br>
             And walk right off into the sea <br>
@@ -48,9 +47,7 @@
             And our ocean graves are just beyond the sand <br>
             I ask myself the question <br>
             Why I fall in line <br>
-        </p>
-
-        <p>
+        <br>
             Then out of the corner of my eye <br>
             I see a spaceship in the sky <br>
             And hear a voice inside my head <br>
@@ -58,15 +55,13 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img2">
         <p>
             Then the wages of war will start <br>
             Inside my head with my counterpart <br>
             And the emotionless marchers will chant the phrase <br>
             This line's the only way <br>
-        </p>
-
-        <p>
+            <br>
             And then I start down the stand <br>
             My eyes are focused on the end of land <br>
             But again the voice inside my head says <br>
@@ -80,9 +75,7 @@
             I don't want to march here anymore <br>
             I realize that this line is dead <br>
             So I'll follow you instead <br>
-        </p>
-
-        <p>
+        <br>
             So then you put me back in my place <br>
             So I might start another day <br>
             And once again I will be <br>
